--- a/Allred_assetpipeline/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Allred_assetpipeline/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -61,10 +61,34 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/ThirdPersonBP/Maps/NewWorld
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/ThirdPersonBP/Maps/NewWorld
 
 [AssetEditorManager]
 CleanShutdown=False
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPersonBP/Maps/NewWorld
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 
